--- a/Meghana B&B/index.html
+++ b/Meghana B&B/index.html
@@ -9,30 +9,31 @@
 <body>
   <h1 class="title">Meghana's Blush & Boutique</h1>
   <div class="gallery">
-    <div class="card"><img src="image/DSN1.jpeg" /></div>
-    <div class="card"><img src="image/dsn2.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn3.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn4.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn5.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn6.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn7.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn8.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn9.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn10.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn11.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn12.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn13.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn14.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn15.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn16.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn17.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn18.png" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn19.jpeg" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn20.jpeg" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn21.jpeg" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn22.jpeg" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn23.jpeg" alt="Design 2" /></div>
-    <div class="card"><img src="image/dsn24.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/DSN1.jpeg" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn2.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn3.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn4.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn5.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn6.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn7.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn8.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn9.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn10.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn11.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn12.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn13.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn14.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn15.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn16.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn17.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn18.png" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn19.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn20.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn21.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn22.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn23.jpeg" alt="Design 2" /></div>
+<div class="card"><img src="https://raw.githubusercontent.com/poojarysam/Meghana-B-B/main/Meghana%20B%26B/image/dsn24.jpeg" alt="Design 2" /></div>
+
 
     <a href="https://wa.me/919876543210?text=Hi%20I%20want%20to%20book%20an%20order!" target="_blank">
       <button style="padding:10px 20px; background-color:#25D366; color:white; border:none; border-radius:10px;">
